--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,17 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
+  - title: "PUBLICATION"
+    url: /publications/
+
+    
+  - title: "PROJECTS"
+    url: /portfolio/
+        
+  - title: "BLOG"
+    url: /year-archive/
+    
+  - title: "GUIDE"
     url: /markdown/
