--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "YiFan Xiong"
   pronouns         : # example: "she/her"  
-  bio              : "Bioinformatics, NGS, Single cell, R, Python, etc."
+  bio              : "Bioinfor, NGS, Single cell, R, Python, etc."
   location         : "XiaMen"
   employer         : "Dynamic Biosystems"
   uri              : # URL
