--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title                    : "YiFan Xiong's Homepage"
 title_separator          : "-"
 name                     : &name "YiFan Xiong"
 description              : &description "personal description"
-url                      : https://xyifan97.github.io/xyfan97.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : https://xyifan97.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "About me" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
