--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "YiFan Xiong's Homepage"
 title_separator          : "-"
 name                     : &name "YiFan Xiong"
 description              : &description "personal description"
-url                      : https://xyifan97.github.io/https://xyifan97.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://xyifan97.github.io/homepage/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "About me" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
