--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "YiFan Xiong"
 description              : &description "personal description"
 url                      : https://xyifan97.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/About me" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 repository               : "xyifan97/xyifan97.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
