--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "YiFan Xiong's Homepage"
 title_separator          : "-"
 name                     : &name "YiFan Xiong"
 description              : &description "personal description"
-url                      : https://xyifan97.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ewanxiong.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "xyifan97/xyifan97.github.io"
+repository               : "ewanxiong/ewanxiong.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
