--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "YiFan Xiong"
   pronouns         : # example: "she/her"  
-  bio              : "Bioinfor, NGS, Single cell, R, Python, etc."
-  location         : "XiaMen"
-  employer         : "Dynamic Biosystems"
+  bio              : "Bioinfor, NGS, Machine Learning, etc."
+  location         : "BeiJing"
+  employer         : "TsingHua University"
   uri              : # URL
   email            : "ewanxiong@gmail.com" 
 
