--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  #googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=l1-P9lYAAAAJ"
   #impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-1168-9179"
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
