--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "YiFan Xiong"
   pronouns         : # example: "she/her"  
-  bio              : "Bioinfor, NGS, ML, etc."
+  bio              : "Bioinformatics, ML, etc."
   location         : "BeiJing"
   employer         : "TsingHua University"
   uri              : # URL
